--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -107,7 +107,70 @@
 #youtube-video-wrapper {
   visibility: hidden;
 }
+</style>
 
+  <style>
+    .hero-section {
+  position: relative;
+  width: 100%;
+  /* Use your chosen image here */
+  background-image: url('assets/img/hero-img.jpg');
+  background-size: cover;
+  background-position: center;
+  /* Aspect ratio control (height) */
+  min-height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  overflow: hidden;
+}
+
+.hero-section .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.4); /* dark overlay to improve text readability */
+}
+
+.hero-section .hero-content {
+  position: relative;
+  text-align: center;
+  padding: 0 20px;
+  max-width: 800px;
+  z-index: 2;
+}
+
+.hero-section h1 {
+  font-size: 2.8rem;
+  margin-bottom: 0.5rem;
+}
+
+.hero-section p {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  line-height: 1.4;
+}
+
+.hero-buttons .btn {
+  margin: 0 8px;
+  padding: 0.6rem 1.5rem;
+  font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+  .hero-section {
+    min-height: 40vh;
+  }
+  .hero-section h1 {
+    font-size: 2.2rem;
+  }
+  .hero-section p {
+    font-size: 1rem;
+  }
+}
 </style>
 
 </head>
@@ -117,7 +180,19 @@
   <main class="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section" style="background-image: url('assets/img/hero-img.jpg')";>
+    <section id="hero" class="hero-section">
+      <div class="overlay"></div>
+    </section>
+      <div class="hero-content" style="
+                  text-align: center;
+                  padding-bottom: 20px;
+                  padding-top: 20px;
+              ">
+    <div class="hero-buttons">
+      <a href="#gallery" class="btn btn-primary">Watch Shorts</a>
+      <a href="#follow" class="btn btn-outline">Follow Me</a>
+    </div>
+  </div>
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-12  d-flex flex-column justify-content-center text-center text-md-start" data-aos="fade-in" style="align-items: center;">
