--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -192,14 +192,14 @@
      <ul>
       <a href="#gallery" class="btn btn-primary">Watch Shorts</a>
       <a href="https://www.youtube.com/@WanderwithReema?sub_confirmation=1" 
-       class="btn btn-primary" 
+       class="btn btn-youtube" 
        target="_blank" 
        rel="noopener noreferrer">
        Subscribe on YouTube
     </a>
 
       <a href="https://www.instagram.com/wanderwithreema/" 
-         class="btn btn-outline" 
+         class="btn btn-instagram" 
          target="_blank" 
          rel="noopener noreferrer">
          Follow on Instagram
