--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -158,8 +158,19 @@
   padding: 0.6rem 1.5rem;
   font-size: 1rem;
   margin-bottom: 10px;
+  font-weight: 500;
 }
-
+a.btn.btn-youtube {
+  background: #FF0000;
+  color: white;
+  border-color: red;
+  font-weight: 500;
+}
+a.btn.btn-instagram {
+  background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  color: white;
+  font-weight: 500;
+}    
 @media (max-width: 768px) {
   .hero-section {
     min-height: 40vh;
