--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -249,7 +249,7 @@ a.btn.btn-instagram {
     <section id="about" class="about section light-background">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" data-aos="fade-up" style="padding-bottom: 20px;">
         <h2>Wander with Reema</h2>
         <h3>Real Stories. Real Style. Real You.</h3>
         <p>Welcome to Wander with Reema, your passport to experiences beyond ordinary. I’m Reema Roy — traveler, storyteller, food lover, fashion enthusiast, and lifelong explorer. Through short videos, reviews, and immersive journeys, I bring you right alongside me as I discover hidden gems, test lifestyle products, and capture the beauty of everyday moments.</p>
@@ -262,7 +262,7 @@ a.btn.btn-instagram {
         <div class="row gy-12">
 
           <div class="row justify-content-center text-center">
-          <div class="col-lg-8 col-md-10" data-aos="fade-up" data-aos-delay="100">
+            <div class="container section-title" data-aos="fade-up" data-aos-delay="100" style="padding-bottom: 20px;">
         
             <p class="lead">Join me. Explore more. Live with wonder.</p>
         
