--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -159,7 +159,7 @@
 .hero-buttons .btn {
   margin: 0 8px;
   padding: 0.6rem 1.5rem;
-  font-size: 1rem;
+  font-size: 16px;
   margin-bottom: 10px;
   font-weight: 500;
 }
@@ -260,7 +260,7 @@ a.btn.btn-instagram {
           <div class="row justify-content-center text-center">
             <div class="container section-title" data-aos="fade-up" data-aos-delay="100" style="padding-bottom: 20px;">
         
-            <p class="lead">Join me. Explore more. Live with wonder.</p>
+            <h3 class="lead">Join me. Explore more. Live with wonder.</h3>
         
             <p>Here, you’ll find:</p>
             <ul class="styled-list">
