--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -46,14 +46,14 @@
 /* Shorts card styling */
 .youtube-slide {
   background: #fff;
-  border-radius: 12px;
+  border-radius: 16px;
   overflow: hidden;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   cursor: pointer;
-  height: 400px; /* Uniform height */
+  height: 420px;
 }
 
 .youtube-slide:hover {
@@ -61,51 +61,110 @@
   box-shadow: 0 8px 25px rgba(0,0,0,0.2);
 }
 
-.youtube-slide iframe {
+/* Thumbnail wrapper */
+.youtube-thumb-wrapper {
+  position: relative;
   width: 100%;
-  height: 70%;
-  border: none;
+  height: 75%;
+  background: #000;
+  overflow: hidden;
 }
 
+/* Thumbnail image */
+.youtube-thumb {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.4s ease;
+}
+
+.youtube-thumb-wrapper:hover .youtube-thumb {
+  transform: scale(1.05);
+}
+
+/* Play button */
+.youtube-play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60px;
+  height: 60px;
+  border: none;
+  border-radius: 50%;
+  background: rgba(255, 0, 0, 0.85);
+  color: #fff;
+  font-size: 28px;
+  cursor: pointer;
+  z-index: 2;
+  transition: all 0.3s ease;
+}
+
+.youtube-play-btn:hover {
+  background: rgba(255, 0, 0, 1);
+  transform: translate(-50%, -50%) scale(1.1);
+}
+
+/* Info section below video */
 .youtube-info {
-  padding: 8px 12px;
+  padding: 10px 12px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   gap: 4px;
-  height: 30%;
+  height: 25%;
   text-align: center;
 }
 
 .youtube-info p.title {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 500;
   line-height: 1.3;
-}
-
-.youtube-info .channel {
-  font-size: 12px;
-  color: #555;
+  margin: 0;
 }
 
 .youtube-info .views {
-  font-size: 16px;
+  font-size: 14px;
   color: #777;
+  margin: 0;
 }
 
+/* Shorts icon before title */
 .youtube-info .shorts-icon {
   display: inline-block;
-  width: 18px;
-  height: 18px;
-  margin-right: 5px;
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
   background: url('https://img.icons8.com/color/48/000000/youtube-play.png') no-repeat center;
   background-size: contain;
   vertical-align: middle;
 }
 
-/* Prevent flicker by hiding the swiper wrapper until all iframes load */
+/* Swiper pagination adjustments */
+.swiper-pagination-bullet {
+  background: #555 !important;
+  opacity: 0.6;
+}
+.swiper-pagination-bullet-active {
+  background: #ff0000 !important;
+  opacity: 1;
+}
+
+/* Make sure wrapper is visible when ready */
 #youtube-video-wrapper {
   visibility: hidden;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .youtube-slide {
+    height: 360px;
+  }
+  .youtube-play-btn {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+  }
 }
 </style>
 
