--- a/wanderwithreema/index.html
+++ b/wanderwithreema/index.html
@@ -166,6 +166,33 @@
     font-size: 24px;
   }
 }
+/* --- Video Modal --- */
+.video-modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.85);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+.video-modal.active {
+  display: flex;
+}
+.video-wrapper {
+  width: 90%;
+  max-width: 420px;
+  aspect-ratio: 9 / 16;
+  background: #000;
+  border-radius: 16px;
+  overflow: hidden;
+}
+.video-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  object-fit: cover;
+} 
 </style>
 
   <style>
